fix(reviewer): fix height on small phones

--- a/src/features/Reviewer/components/styles.module.css
+++ b/src/features/Reviewer/components/styles.module.css
@@ -186,17 +186,16 @@ button.transparent {
 
 @media (max-width: 62rem) {
 	.reviewer {
-		height: 100vh;
+		height: 100%;
 		padding: var(--spacing-5);
 
 		& .study-box {
-			height: 100%;
-			max-height: 100%;
+			flex: 1;
+			max-height: auto;
+			height: auto;
 		}
 	}
-}
 
-@media (max-width: 46rem) {
 	.study-footer {
 		flex-direction: column;
 		padding: var(--spacing-3) var(--spacing-5);
